--- a/README.adoc
+++ b/README.adoc
@@ -1,13 +1,13 @@
-= Polkadot Java Client
+= PolkaJ - Polkadot Java Client
 :lib-version: 0.1.0-SNAPSHOT
 :lib-version-dev: 0.1.0-SNAPSHOT
 
-image:https://github.com/emeraldpay/polkadot-java-client/workflows/Tests/badge.svg["Unit Tests"]
-image:https://codecov.io/gh/emeraldpay/polkadot-java-client/branch/master/graph/badge.svg["Coverage",link="https://codecov.io/gh/emeraldpay/polkadot-java-client"]
-image:https://img.shields.io/github/license/emeraldpay/polkadot-java-client.svg?style=flat-square&maxAge=2592000["License",link="https://github.com/emeraldpay/polkadot-java-client/blob/master/LICENSE"]
+image:https://github.com/emeraldpay/polkaj/workflows/Tests/badge.svg["Unit Tests"]
+image:https://codecov.io/gh/emeraldpay/polkaj/branch/master/graph/badge.svg["Coverage",link="https://codecov.io/gh/emeraldpay/polkaj"]
+image:https://img.shields.io/github/license/emeraldpay/polkaj.svg?style=flat-square&maxAge=2592000["License",link="https://github.com/emeraldpay/polkaj/blob/master/LICENSE"]
 image:https://badges.gitter.im/emeraldpay/community.svg["Gitter",link="https://gitter.im/emeraldpay/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge"]
 
-Java client library to access Polkadot based networks.
+Java client library to use and access API of Polkadot based networks.
 
 WARNING: UNDER DEVELOPMENT
 
@@ -18,9 +18,9 @@ WARNING: UNDER DEVELOPMENT
 
 == Modules
 
-- `io.emeraldpay.pjc:scale:{lib-version}` - SCALE codec implementation
-- `io.emeraldpay.pjc:ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
-- `io.emeraldpay.pjc:types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
+- `io.emeraldpay.polkaj:polkaj-scale:{lib-version}` - SCALE codec implementation
+- `io.emeraldpay.polkaj:polkaj-ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
+- `io.emeraldpay.polkaj:polkaj-types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
 
 == Usage
 
@@ -45,13 +45,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.emeraldpay.pjc:type:{lib-version}'
+    implementation 'io.emeraldpay.polkaj:polkaj-type:{lib-version}'
 }
 ----
 
 == Documentation
 
-See link:docs/README.adoc[Documentation] in `./docs` directory, and a demonstration in `./examples`.
+See link:docs/[Documentation] in `./docs` directory, and a demonstration in `./examples`.
 
 == License
 
