--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 = PolkaJ - Polkadot Java Client
-:lib-version: 0.1.0-SNAPSHOT
+:lib-version: 0.1.0
 :lib-version-dev: 0.1.0-SNAPSHOT
 
 image:https://github.com/emeraldpay/polkaj/workflows/Tests/badge.svg["Unit Tests"]
@@ -11,8 +11,7 @@ Java client library to use and access API of Polkadot based networks.
 
 WARNING: UNDER DEVELOPMENT
 
-
-- Latest Stable Version: NONE
+- Latest Stable Version: {lib-version}
 - Latest Snapshot Version: {lib-version-dev}
 
 
