solution: HTTP JSON RPC client

--- a/README.adoc
+++ b/README.adoc
@@ -20,6 +20,8 @@ WARNING: UNDER DEVELOPMENT
 - `io.emeraldpay.polkaj:polkaj-scale:{lib-version}` - SCALE codec implementation
 - `io.emeraldpay.polkaj:polkaj-ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
 - `io.emeraldpay.polkaj:polkaj-types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
+- `io.emeraldpay.polkaj:polkaj-json:{lib-version}` - JSON RPC mapping to Java classes
+- `io.emeraldpay.polkaj:polkaj-client-rpc:{lib-version}` - JSON RPC HTTP client
 
 == Usage
 
