--- a/README.adoc
+++ b/README.adoc
@@ -20,14 +20,12 @@ WARNING: UNDER DEVELOPMENT
 - `io.emeraldpay.polkaj:polkaj-scale:{lib-version}` - SCALE codec implementation
 - `io.emeraldpay.polkaj:polkaj-ss58:{lib-version}` - SS58 codec to encode/decode addresses and pubkeys
 - `io.emeraldpay.polkaj:polkaj-types:{lib-version}` - common types (Address, DotAmount, Hash256, etc)
-- `io.emeraldpay.polkaj:polkaj-json:{lib-version}` - JSON RPC mapping to Java classes
-- `io.emeraldpay.polkaj:polkaj-client-rpc:{lib-version}` - JSON RPC HTTP client
+- `io.emeraldpay.polkaj:polkaj-json:{lib-version-dev}` - JSON RPC mapping to Java classes
+- `io.emeraldpay.polkaj:polkaj-client-rpc:{lib-version-dev}` - JSON RPC HTTP client
 
 == Usage
 
-NOTE: The library is not uploaded to any public Maven repository yet
-
-To use development version you need to install into local Maven.
+To use development SNAPSHOT versions you need to install the library into the local Maven repository.
 
 .Install into local Maven
 ----
