--- a/docs/ref-01-api-commands.adoc
+++ b/docs/ref-01-api-commands.adoc
@@ -7,6 +7,7 @@
 - <<getBlock>>
 - <<getFinalizedHead>>
 - <<getHead>>
+- <<getRuntimeVersion>>
 * System
 - <<systemChain>>
 - <<systemHealth>>
@@ -50,6 +51,25 @@ Shortcut:: `{shortcut-base}.getHead()`
 Command:: `chain_getHead`
 Parameters:: none
 Java Object:: `Hash256`
+
+[#getRuntimeVersion]
+=== Get Runtime Version (`chain_getRuntimeVersion`)
+
+Get the Runtime Version of the current blockchain
+
+Shortcut:: `{shortcut-base}.getRuntimeVersion()`
+Command:: `chain_getRuntimeVersion`
+Parameters:: none
+Java Object:: `RuntimeVersionJson`
+
+.RuntimeVersionJson Properties
+- `List<List<?>> getApis()`
+- `Integer getAuthoringVersion()`
+- `String getImplName()`
+- `Integer getImplVersion()`
+- `String getSpecName()`
+- `Integer getSpecVersion()`
+- `Integer getTransactionVersion()`
 
 [#systemChain]
 === System Chain (`system_chain`)
